Bugfix: Sign-off layout (#260)
* Fix sign-off table layout for all devices; remove padding from phone sign-off

* Fix search bar width on phone

* Add module 'react-replace-string'; implement highlight functionality for search

* Remove unnecessary comments

* Add name of assignment set to title in sign-off screen

--- a/frontend/src/styling/index.scss
+++ b/frontend/src/styling/index.scss
@@ -75,6 +75,12 @@ button {
     user-select: none;
  }
 
+ .ellipsis {
+    white-space: nowrap; 
+    overflow: hidden;
+    text-overflow: ellipsis; 
+ }
+
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 * Extended/overwritten reactstrap classes
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
@@ -291,6 +297,12 @@ button {
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 * Sign-off table properties
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
+.SignOffTableWrapper {
+    width: 100%;
+    height: 100%;    
+    overflow: auto;
+}
+
 .sign-off-table {
     td,
     th {
@@ -312,15 +324,14 @@ button {
 .sign-off-table-top-row {
     position: sticky;
     position: -webkit-sticky;
-    top: -20px;
+    top: 0px;
 }
 
 .sign-off-table-left-column {
     @extend .unselectable;
     position: sticky;
     position: -webkit-sticky;
-    left: -20px;
-    // border-right-width: 2px !important;
+    left: 0px;
 }
 
 .sign-off-table-left-column::selection {
@@ -380,7 +391,6 @@ button {
 * Autosuggest properties
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 .react-autosuggest__container {
-    flex: 1 1 0 !important;
     margin-right: 1rem !important;
 }
 
@@ -389,7 +399,6 @@ button {
     font-size: 1.25rem;
     font-weight: 400;
     line-height: 1.5;
-    height: calc(1.5em + 1.15rem + 2px);
     padding: 0.375rem 0.75rem;
     color: #495057;
     background-color: #fff;
@@ -417,12 +426,11 @@ button {
 }
 
 .react-autosuggest__suggestions-container--open {
-    display: block;
+    display: flex;
     position: absolute;
-    top: 49px;
-    left: 16px;
-    height: 500px;
-    width: 90%;
+    width: 600px;
+    max-width: 90%;
+    max-height: 500px;
     overflow-y: auto;
     border: 1px solid #aaa;
     background-color: #fff;
